fix(in-ob):[IPC][ph3.5]:prevent image overflow

--- a/nextjs-blog/styles/decisioncard.module.scss
+++ b/nextjs-blog/styles/decisioncard.module.scss
@@ -9,6 +9,7 @@
     flex-direction: column;
     justify-content: space-between;
     max-width: 768px;
+    overflow: hidden;
 
     @media (max-width: 768px) {
         height: auto;
