--- a/nextjs-blog/styles/trackcontainer.module.scss
+++ b/nextjs-blog/styles/trackcontainer.module.scss
@@ -2,9 +2,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-left: 3%;
-    flex-wrap: nowrap;
-    margin-right: 3%;
+    margin-left: auto; 
+    margin-right: auto;
     margin-top: 5%;
     margin-bottom: 5%;
     justify-content: space-around;
